# what-todo-next

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  tauri.conf.json
backend/src/: main.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/styles/: main.css
