[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.5", features = ["custom-protocol"] }
tauri-plugin-shell = "2.3.1"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
tauri-build = "2.4.1"
